--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"Meekdai",
+    "title":"老胡的故事",
     "subTitle":"大道至简",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
