--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"老胡的故事",
     "subTitle":"大道至简",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/251685780?s=400&u=ceddd078338422c575fc34310f1fb400dd1363b4&v=4",
     "GMEEK_VERSION":"last"
 }
